# swig_box

./: .gitignore  CMakeLists.txt  README.md  fubar_benchmark.cpp  main.cpp
inc/: FuInterface.hpp  fubar.i
src/: Fubar.cpp
